# recipebox

./: .gitignore  README.md  db.sqlite3  pyproject.toml
book/: admin.py  forms.py  models.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_author_favorites.py  0002_recipeitem.py
book/templates/: author.html  bookaddform.html  index.html  login.html  logout.html  recipe_add.html  recipe_edit.html  recipes.html
recipes/: settings.py  urls.py
